# tero

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  README.md  devbox.json  docker-compose.yml  index.html
src/backend/: alembic.ini  pyproject.toml  pytest.ini
src/backend/alembic/: env.py  script.py.mako
src/backend/alembic/versions/: 20251016-4c775a5d6fdc-test_case_suite.py  20251027-e0ef28b0b663-initial_db.py  20251030-07fd1bcafad1-llm_model_vendor.py
src/backend/tero/: __main__.py  api.py  mcp_server.py  secrets_cleanup.py
src/backend/tero/agents/: api.py  distribution.py  domain.py  field_generation.py  repos.py  template_parser.py  tool_file.py
src/backend/tero/agents/assets/: agent-template.md
src/backend/tero/agents/prompts/: api.py  domain.py  repos.py
src/backend/tero/agents/test_cases/: api.py  domain.py  repos.py  runner.py
src/backend/tero/ai_models/: ai_factory.py  api.py  aws_provider.py  azure_provider.py  domain.py  google_provider.py  openai_provider.py  repos.py
src/backend/tero/core/: api.py  assets.py  auth.py  domain.py  env.py  repos.py
src/backend/tero/external_agents/: api.py  domain.py  mcp_tools.py  repos.py
src/backend/tero/files/: api.py  domain.py  file_processor.py  file_quota.py  parser.py  pdf_processor.py  repos.py
src/backend/tero/teams/: api.py  domain.py  repos.py
src/backend/tero/threads/: api.py  domain.py  engine.py  repos.py  time_saved_estimation.py
src/backend/tero/tools/: api.py  core.py  oauth.py  repos.py  tool-schema.json
src/backend/tero/tools/browser/: __init__.py  tool-schema.json  tool.py
src/backend/tero/tools/docs/: __init__.py  domain.py  repos.py  tool-schema.json  tool.py
src/backend/tero/tools/docs/assets/: answer-prompt.md  file-description-prompt.md  (+2 more)
src/backend/tero/tools/jira/: __init__.py  tool-schema.json  tool.py
src/backend/tero/tools/mcp/: __init__.py  tool-schema.json  tool.py
src/backend/tero/tools/web/: __init__.py  tool.py
src/backend/tero/usage/: api.py  domain.py  repos.py
src/backend/tero/users/: api.py  domain.py  repos.py
src/backend/tests/: common.py  test_agent_distribution.py  test_agent_prompts.py  test_agents.py  test_config.py  test_external_agents.py  test_llm_models.py  test_teams.py  test_test_cases.py  test_threads.py  test_tools.py  test_transcript.py  test_usage.py  test_users.py
src/backend/tests/assets/: audio.webm  init_db.sql  pdf_basic_content.txt  pdf_enhanced_content.txt  sheet.xls  sheet.xlsx
src/backend/tests/assets/agent_distribution/: invalid_tool_agent.md  minimal_agent.md
(+239 files in other folders)
